--- a/type_B/resources/css/import.css
+++ b/type_B/resources/css/import.css
@@ -51,3 +51,8 @@
 	font-weight: 800;
 	src: url('../font/BlenderPro-Heavy.ttf');
 }
+@font-face{
+	font-family: GothamPro;
+	font-weight: 400;
+	src: url('../font/GothamPro.ttf');
+}
