--- a/type_A/resources/css/main.css
+++ b/type_A/resources/css/main.css
@@ -56,8 +56,11 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
     background: url('../images/main_vsl_05_bg.png') no-repeat 0 0; background-size: cover;
 }
 
-.wrap .main_vsl .visit{display: block; width: 48px; height: 48px; position: absolute; right: 25px; bottom: 40px; z-index: 10;}
-.wrap .main_vsl .visit img{width: 100%;}
+.wrap .main_vsl .visit{display: block; width: 48px; height: 48px; position: absolute; right: 25px; bottom: 40px; z-index: 10; border: 2px solid #fff; border-radius: 48px; transition: 0.75s ease-in-out; cursor: pointer;}
+.wrap .main_vsl .visit:hover{width: 130px; }
+.wrap .main_vsl .visit img{display: inline-block; width: 48px; height: 48px; position: absolute; left: -2px; top: -2px; z-index: 5;}
+.wrap .main_vsl .visit p{display: inline-block; opacity: 0; color: #fff; font-size: 14px; font-weight: 700; line-height: 1; padding: 14px 0 0 55px;}
+.wrap .main_vsl .visit:hover p{opacity: 1; transition: 0.5s ease-in-out 0.5s;}
 
 .main_vsl .scrollBtn{
     position: absolute; left: 50%; bottom: 10px; z-index: 5;
