--- a/type_A/resources/css/sub.css
+++ b/type_A/resources/css/sub.css
@@ -22,10 +22,13 @@ main{width: 100%;}
 .vsl .inner .cont.photo h2.active + span{background:url('../images/product/main_vsl_photo_bg.png')no-repeat 0 0; background-size: cover;}
 .vsl .inner .cont.etch h2.active + span{background:url('../images/product/main_vsl_etch_bg.png')no-repeat 0 0; background-size: cover;}
 .vsl .inner .cont span{display: block; width: 100%; height: 100%; position: absolute; left: 0; top: 0; z-index: 5;}
-.vsl .visit{display: block; width: 48px; height: 48px; position: absolute; right: 25px; bottom: 40px; z-index: 10;}
-.vsl .visit img{width: 100%;}
+.vsl .visit{display: block; width: 48px; height: 48px; position: absolute; right: 25px; bottom: 40px; z-index: 10; border: 2px solid #fff; border-radius: 48px; transition: 0.75s ease-in-out; cursor: pointer;}
+.vsl .visit:hover{width: 130px; }
+.vsl .visit img{display: inline-block; width: 48px; height: 48px; position: absolute; left: -2px; top: -2px; z-index: 5;}
+.vsl .visit p{display: inline-block; opacity: 0; color: #fff; font-size: 14px; font-weight: 700; line-height: 1; padding: 14px 0 0 55px;}
+.vsl .visit:hover p{opacity: 1; transition: 0.5s ease-in-out 0.5s;}
 .vsl .scrollBtn{
-    position: absolute; left: 50%; bottom: 10px; z-index: 10;
+    position: absolute; left: 50%; bottom: 10px; z-index: 1;
     width: auto;
     height: auto;
     display: flex;
