ceo 이미지 수정

--- a/type_B/resources/css/main.css
+++ b/type_B/resources/css/main.css
@@ -133,9 +133,9 @@ main{width: 100%; position: relative;}
 .wrap .other ul li .desc dl dd:last-child{margin-top: 30px;}
 
 .move{opacity: 0; transform: translateY(130px);}
-.move.right{opacity: 0; transform: translateX(150px);}
-.move.left{opacity: 0; transform: translateX(-150px);}
-.move.left.active{
+.right{opacity: 0; transform: translateX(150px);}
+.left{opacity: 0; transform: translateX(-150px);}
+.left.active{
     opacity:1 !important;
     transform:translateX(0) !important;
     -webkit-transform:translateX(0);
@@ -144,7 +144,7 @@ main{width: 100%; position: relative;}
     -webkit-transition:all 1.2s;
     -ms-transition:all 1.2s;
 }
-.move.right.active{
+.right.active{
     opacity:1 !important;
     transform:translateX(0) !important;
     -webkit-transform:translateX(0);
